--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-/* the styles for the elements */
 {margin: 0;
     padding: 0;
 }
@@ -32,7 +31,7 @@ header{
 }
 
 header h2 {
-	font-size: 175%;
+	font-size: 170%;
 	color: #800000;
 	
 }
@@ -92,6 +91,7 @@ section blockquote{
 section ul {
     padding-bottom: .25em;
     padding-left: 1.25em;
+    list-style-type: circle;
 }
 section li {
     padding-bottom: .35em;
@@ -130,7 +130,7 @@ aside img{
 }
 
 footer{
-    background-color: blue;
+    background-color: navy;
     clear: both;
 }
 footer p {
@@ -139,4 +139,42 @@ footer p {
     padding-top: 1em;
     padding-bottom: 1em;
 }
-
+#nav_menu ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+#nav_menu ul li {
+    float: left;
+}
+#nav_menu ul li a{
+    display: block;
+    width: 160px;
+    text-align: center;
+    padding: 1em 0;
+    text-decoration: none;
+    background-color: navy;
+    color: white;
+    font-weight: bold;
+    
+}
+#nav_menu a.current{
+    color: greenyellow;
+}
+#nav_menu ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+#nav_menu ul ul il {
+    float: none;
+}
+#nav_menu ul li:hover > ul{
+    display: block;
+}
+#nav_menu > ul::after {
+    content: "";
+    clear:both;
+    display: block;
+}
